--- a/landing — копия/html/index.html
+++ b/landing — копия/html/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <title>Document</title>
+    <link rel="shortcut icon" href="../images/logo.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
 </head>
 
